syntax = "proto3";

package user;

service UserService {
  rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
}

message GetUserByIdRequest {
  string userId = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  string specialty = 5;
  bool exists = 6;
}
